--- a/.gitignore
+++ b/.gitignore
@@ -30,11 +30,13 @@ yarn-debug.log*
 yarn-error.log*
 
 # env files (can opt-in for committing if needed)
-.env*
+.env*.local
+.env
 
 # vercel
 .vercel
-
+#local password file
+password.txt
 # typescript
 *.tsbuildinfo
 next-env.d.ts
