--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-spinners": "^0.15.0",
     "react-toastify": "^10.0.6",
     "stripe": "^17.4.0",
+    "swr": "^2.2.5",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "use-sound": "^4.0.3",
