--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "nanoid": "^5.0.9",
     "next": "15.0.3",
     "query-string": "^9.1.1",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.0",
     "react-icons": "^5.3.0",
     "react-spinners": "^0.15.0",
